# r0-zkEmail

./: .env.example  .gitignore  Cargo.toml  README.md  profile_no_rsa.pb  profile_rsa.pb  profile_rsa1.pb
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: input_generator.rs  lib.rs  structs.rs
host/: Cargo.toml
host/src/: main.rs  utils.rs
host/test-regexes/: test.json
methods/: Cargo.toml  build.rs
methods/email-verify/: Cargo.toml
methods/email-verify/src/: main.rs
methods/email-with-regex-verify/: Cargo.toml
methods/email-with-regex-verify/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
