[workspace]
resolver = "2"
members = ["host", "methods", "app"]

[workspace.dependencies]
boundless-market = "0.4"
risc0-build = "1.2.0"
risc0-zkvm = "1.2.0"
risc0-build-ethereum = "1.2"

alloy = "0.6"
anyhow = "1.0"
borsh = "1.5.3"
bytemuck = "1.16"
cfdkim = { git = "https://github.com/risc0-labs/dkim", default-features = false, features = ["dns"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
log = "0.4.22"
mailparse = "0.14.0"
postcard = "1.0"
regex-automata = "0.4.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
slog = "2.7.0"
tokio = "1.41.1"
tracing = "0.1"
tracing-subscriber = "0.3"
trust-dns-resolver = "0.23.2"
url = "2.5"

zkemail-core = { git = "https://github.com/zkemail/zkemail.rs" }
zkemail-helpers = { git = "https://github.com/zkemail/zkemail.rs" }

host = { path = "./host" }
methods = { path = "./methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
