[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true, features = ["signers", "full"] }
anyhow = { workspace = true }
borsh = { workspace = true }
boundless-market = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
methods = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
zkemail-core = { workspace = true, features = ["risc0"] }
zkemail-helpers = { workspace = true }
