[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0", features = ["unstable"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
cfdkim = { git = "https://github.com/risc0-labs/dkim" } 
mailparse = "0.14.0"
tokio = { version = "1.41.1", features = ["full"] }
trust-dns-resolver = "0.23.2"
slog = "2.7.0"
anyhow = "1.0.93"
log = "0.4.22"
postcard = { version = "1.0", features = ["alloc"] }
zkemail-core = { path = "../core" }
