[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { workspace = true }
risc0-zkvm = { workspace = true, features = ["unstable"]}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
cfdkim = { workspace = true } 
mailparse = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trust-dns-resolver = { workspace = true }
slog = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
zkemail-core = { workspace = true }
serde_json = { workspace = true }
regex-automata = { workspace = true }
