[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-zkvm = { workspace = true, features = ["unstable"]}
serde = { workspace = true }
zkemail-core = { workspace = true }
zkemail-helpers = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }