[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
borsh = "1.5.3"
risc0-zkvm = { version = "1.2.0", default-features = false, features = [
	"std",
	"unstable",
] }
zkemail-core = { git = "https://github.com/zkemail/zkemail.rs", branch = "feat/core-impl" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
rsa = { git = "https://www.github.com/risc0/RustCrypto-RSA.git", tag = "v0.9.6-risczero.0" }

[profile.release]
debug = 1
lto = "thin"